<resources>
    <string name="app_name">Fuel Mule</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login / Sign up</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="logs">Logs</string>
    <string name="user">User</string>
    <string name="selected_photos">*Selected Photos*</string>
    <string name="analyze">Analyze</string>
    <string name="take_photo">Take Photo</string>
    <string name="import_photo">Import Photo</string>
    <string name="ingredients_detected">Ingredients Detected:</string>
    <string name="total_calories">Total: 600 Calories</string>
    <string name="save_meal">Save Meal</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="please_add_image">Please upload at least 1 image</string>
    <string name="calories">Calories</string>
    <string name="sodium">Sodium</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="cal_value">600</string>
    <string name="sod_value">100mg</string>
    <string name="fat_value">3g</string>
    <string name="carbs_value">20g</string>
    <string name="pro_value">5g</string>
    <string name="quickadd">Quick-add</string>
    <string name="daily_stats">Daily Stats</string>
    <string name="save_meal_dialog">Please enter a name for this meal.</string>
    <string name="save_meal_dialog_edittext">Meal Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string-array name="ingredients">
        <item>Tomatoes: 200g</item>
        <item>Cheese: 100g</item>
        <item>Mushrooms: 300g</item>
        <item>Carrots: 400g</item>
        <item>Onions: 400g</item>
        <item>Potatoes: 100g</item>
    </string-array>
</resources>
