<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/ingredients_detected"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:entries="@array/ingredients"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/calories"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/sodium"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/fat"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/carbs"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/protein"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/cal_value"
            android:textSize="16sp"
            android:gravity="center"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/sod_value"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/fat_value"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/carbs_value"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/pro_value"
            android:textSize="16sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_meal_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save_meal"
            android:background="@color/colorPrimary"
            android:layout_margin="8dp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/import_photo_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/edit_meal"
            android:background="@color/colorPrimary"
            android:layout_margin="8dp"
            tools:ignore="ButtonStyle,NestedWeights" />

    </LinearLayout>

</LinearLayout>