<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:baselineAligned="false">

    <FrameLayout
        android:id="@+id/home_button_frame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorSelected">

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/home"
            android:src="@drawable/home" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/camera_button_frame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/camera"
            android:src="@drawable/camera" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/logs_button_frame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/logs_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/logs"
            android:src="@drawable/logs" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/user_button_frame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/user_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/user"
            android:src="@drawable/user" />

    </FrameLayout>

</LinearLayout>